<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group>
        <item
            android:id="@+id/menu_manga_library_content"
            android:icon="@drawable/ico_library_manga"
            android:title="@string/menu_manga">
            <menu android:id="@+id/menu_manga_library_items">
                <item
                    android:id="@+id/menu_manga_library_default"
                    android:icon="@drawable/ico_library_manga"
                    android:orderInCategory="0"
                    android:title="@string/menu_library"/>
            </menu>
        </item>

        <item
            android:id="@+id/menu_book_library_content"
            android:icon="@drawable/ico_library_book"
            android:title="@string/menu_books">
            <menu android:id="@+id/menu_book_library_items">
                <item
                    android:id="@+id/menu_book_library_default"
                    android:icon="@drawable/ico_library_book"
                    android:orderInCategory="0"
                    android:title="@string/menu_book"/>
            </menu>
        </item>

        <item
            android:id="@+id/menu_history"
            android:icon="@drawable/ico_history"
            android:orderInCategory="100"
            android:title="@string/menu_history" />

        <item
            android:id="@+id/menu_vocabulary"
            android:icon="@drawable/ico_animated_vocabulary"
            android:orderInCategory="100"
            android:title="@string/menu_vocabulary" />

        <item
            android:id="@+id/menu_annotations"
            android:icon="@drawable/ico_animated_book_annotations"
            android:orderInCategory="100"
            android:title="@string/menu_annotations" />

        <item
            android:id="@+id/menu_statistics"
            android:icon="@drawable/ico_statistics"
            android:orderInCategory="100"
            android:title="@string/menu_statistics" />

        <item
            android:id="@+id/menu_trackers"
            android:icon="@drawable/ico_tracker"
            android:orderInCategory="100"
            android:title="@string/menu_trackers" />

        <item
            android:id="@+id/menu_configuration"
            android:icon="@drawable/ico_settings"
            android:orderInCategory="100"
            android:title="@string/menu_config" />

        <item
            android:id="@+id/menu_help"
            android:icon="@drawable/ico_help"
            android:orderInCategory="100"
            android:title="@string/menu_help" />

        <item
            android:id="@+id/menu_about"
            android:icon="@drawable/ico_about"
            android:orderInCategory="100"
            android:title="@string/menu_about" />
    </group>

</menu>